--- a/JS/Task1/package.json
+++ b/JS/Task1/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "neo4j-driver": "^4.3.3"
+    "neo4j-driver": "^4.3.3",
+    "parse-neo4j": "^0.6.11"
   },
   "homepage": "https://github.com/da-foxbite/Neo4J#readme"
 }
